# pixel-art-pipeline

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/liquid-gold/: config.yaml
examples/starter/: config.yaml
pixelart/: __init__.py  __main__.py  assembler.py  cli.py  client.py  config.py  generator.py
tests/: test_assembler.py  test_config.py
